project on hold

--- a/index.html
+++ b/index.html
@@ -10,16 +10,18 @@
   <body>
     <div class="container">
       <div class="game">
-        <div class="play-box">O</div>
-        <div class="play-box">X</div>
-        <div class="play-box"></div>
-        <div class="play-box"></div>
-        <div class="play-box"></div>
-        <div class="play-box"></div>
-        <div class="play-box"></div>
-        <div class="play-box"></div>
-        <div class="play-box"></div>
+        <div class="play-box" data-box="1">O</div>
+        <div class="play-box" data-box="2">X</div>
+        <div class="play-box" data-box="3"></div>
+        <div class="play-box" data-box="4"></div>
+        <div class="play-box" data-box="5"></div>
+        <div class="play-box" data-box="6"></div>
+        <div class="play-box" data-box="7"></div>
+        <div class="play-box" data-box="8"></div>
+        <div class="play-box" data-box="9"></div>
       </div>
     </div>
+
+    <script src="index.js"></script>
   </body>
 </html>
