fixed the winner and display on scren

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div class="container">
+      <div class="winners"></div>
       <div class="game">
         <div class="play-box" data-box="0"></div>
         <div class="play-box" data-box="1"></div>
